--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,31 @@
 {
     "name": "royalcms/wechat-oauth",
+    "description": "The Royalcms wechat-oauth package.",
     "type": "library",
     "license": "MIT",
+    "homepage": "http://royalcms.cn",
+    "support": {
+        "issues": "https://github.com/royalcms/framework/issues",
+        "source": "https://github.com/royalcms/framework"
+    },
     "authors": [
         {
-            "name": "王正东",
-            "email": "wangzhengdong@ecmoban.com"
+            "name": "Royal Wang",
+            "email": "hxroyal@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "php": ">=5.5.9"
+    },
+    "autoload": {
+        "psr-4": {
+            "Royalcms\\Component\\Wechat\\Oauth\\": "Royalcms/Component/Wechat/Oauth"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "5.0-dev"
+        }
+    },
+    "minimum-stability": "dev"
 }
